--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -6,8 +6,9 @@ log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} [%5p] %c{1} - %m%n
+log4j.appender.console.filter.range=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.console.filter.range.LevelMin=DEBUG
-log4j.appender.console.filter.range.LevelMax=DEBUG
+log4j.appender.console.filter.range.LevelMax=INFO
 #log4j.appender.console.Threshold=WARN
 
 # Redirect log error messages to an error log file
